--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prompt-sync": "^4.2.0",
     "sequelize": "^6.31.0",
     "sequelize-cli": "^6.6.0",
+    "sqlite3": "^5.1.6",
     "supertest": "^6.3.3"
   }
 }
